Added 2 additional recipe pages, and organized the links on the index.html page.

--- a/recipes/classic-waffles.html
+++ b/recipes/classic-waffles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Document</title>
+    <title>Classic Waffles</title>
 </head>
 <body>
     <h1>Classic Waffles</h1>
@@ -12,18 +12,39 @@
 
     <h2>Description</h2>
 
-    <p></p>
+    <p>These easy Classic Waffles make a tasty alternative to pancakes or French toast on those days when you just don't feel like making breakfast! Crispy yet soft, sweet yet buttery - they're just amazing!</p>
 
     <h2>Ingredients</h2>
 
+    <h3>For the waffles</h3>
+
     <ul>
-        <li></li>
+        <li>2 large eggs</li>
+        <li>2 cups all-purpose flour</li>
+        <li>1-3/4 cup milk</li>
+        <li>1/2 cup vegetable oil</li>
+        <li>1 tablespoon granulated sugar</li>
+        <li>4 teaspoons baking powder</li>
+        <li>1/4 tablespoon salt</li>
+    </ul>
+
+    <h3>For serving</h3>
+
+    <ul>
+        <li>butter</li>
+        <li>maple syrup</li>
+        <li>fruit</li>
     </ul>
 
     <h2>Steps</h2>
 
     <ol>
-        <li></li>
+        <li>Heat waffle iron.</li>
+        <li>Beat eggs in a large bowl with a hand mixer until fluffy. Beat in the remaining ingredients just until smooth.</li>
+        <li>Pour a scant 2/3 cup of the batter (see note below) onto the center of the hot waffle iron. Close the lid of the waffle iron.</li>
+        <li>Bake for about 5 minutes or until the steaming stops. Carefully remove the waffle.</li>
+        <li>Repeat steps 3-4 with the remaining batter.</li>
+        <li>Serve the waffles with butter, maple syrup, fruit, whipped cream, or your favorite t.oppings</li>
     </ol>
 
 </body>
