--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+<ul>
+    <li><a href="recipes/classic-waffles.html">Classic Waffles</a></li>
+    <li><a href="recipes/overnight-oats.html">Overnight Oats</a></li>
+    <li><a href="recipes/breakfast-burritos.html">Breakfast Burritos</a></li>
+</ul>
 
-    <a href="recipes/classic-waffles.html">Classic Waffles</a>
 </body>
 </html>
