Added CSS to style the pages, replaced a recipe, and added a home page link to each page

--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
 
     <title>Odin Recipes</title>
-</head>
-<body>
+    <link rel="stylesheet" href="index-style.css" />
+  </head>
+  <body>
     <h1>Odin Recipes</h1>
-<ul>
-    <li><a href="recipes/classic-waffles.html">Classic Waffles</a></li>
-    <li><a href="recipes/overnight-oats.html">Overnight Oats</a></li>
-    <li><a href="recipes/breakfast-burritos.html">Breakfast Burritos</a></li>
-</ul>
-
-</body>
+    <img
+      class="recipes"
+      src="../images/recipes.jpg"
+      alt="A picture of a big plate of fries, chicken, and peas"
+    />
+    <div>
+      <ul>
+        <li>
+          <a href="recipes/breakfast-burritos.html">Breakfast Burritos</a>
+        </li>
+        <li>
+          <a href="recipes/broccoli-cheddar-soup.html">Broccoli Cheddar Soup</a>
+        </li>
+        <li><a href="recipes/classic-waffles.html">Classic Waffles</a></li>
+      </ul>
+    </div>
+  </body>
 </html>
