--- a/recipes/breakfast-burritos.html
+++ b/recipes/breakfast-burritos.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
 
     <title>Breakfast Burritos</title>
-</head>
-<body>
+
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h1>Breakfast Burritos</h1>
 
-    <img src="../images/breakfast-burritos.jpeg" alt="A picture of a breakfast burrito cut in half.">
+    <img
+      class="burrito"
+      src="../images/breakfast-burritos.jpeg"
+      alt="A picture of a breakfast burrito cut in half"
+    />
 
     <h2>Description</h2>
 
-    <p>Breakfast Burritos are the perfect breakfast! Loaded with potatoes, eggs, and either ham, bacon or sausage, these breakfast burritos are the best way to start your day! Double the batch and freeze to save time on busy mornings!</p>
+    <p>
+      Breakfast Burritos are the perfect breakfast! Loaded with potatoes, eggs,
+      and either ham, bacon or sausage, these breakfast burritos are the best
+      way to start your day! <br />
+      Double the batch and freeze to save time on busy mornings!
+    </p>
 
     <h2>Ingredients</h2>
 
-    <ul>
+    <div>
+      <ul>
         <li>breakfast sausage</li>
         <li>bacon</li>
         <li>ham</li>
@@ -28,16 +40,28 @@
         <li>olive oil</li>
         <li>seasoning salt</li>
         <li>salt and pepper</li>
-    </ul>
+      </ul>
+    </div>
 
     <h2>Steps</h2>
 
-    <ol>
-        <li>Prepare the protein by cooking the bacon, browning the sausage, and frying the ham.</li>
+    <div>
+      <ol>
+        <li>
+          Prepare the protein by cooking the bacon, browning the sausage, and
+          frying the ham.
+        </li>
         <li>Put the potatoes in the oven to bake.</li>
         <li>Make scrambled eggs, and warm up the tortillas.</li>
-        <li>Build the burritos by setting up an assembly line with all the ingredients.</li>
-    </ol>
+        <li>
+          Build the burritos by setting up an assembly line with all the
+          ingredients.
+        </li>
+      </ol>
+    </div>
 
-</body>
+    <div>
+      <a href="../">Home Page</a>
+    </div>
+  </body>
 </html>
